customizable DefaultTestClientFactory: it is now possible to use default implementation with customizations (override `configure` method); add ApacheTestClientFactory: useful to support PATCH methods on jdk > 16; add `useApacheClient` (shortcut) configuration into `@TestGuiceyApp` and `@TestDropwizardApp` to simplify usage of ApacheTestClientFactory with annotations; add `useApacheClient()` (shortcut) method into extension and generic builders
(cherry picked from commit 70348acbb3b43e47282360c47a2efaf911e8cf17)